crates/velme-cli/tests/snapshots/codes__vl0406_human.snap
---
source: crates/velme-cli/tests/codes.rs
expression: redact(&human.stderr)
---
Sending your plans, types, checks and examples to the external backend at 127.0.0.1 to write the code.
Error: The backend `velme-test-support` couldn't build `Double`: its reply wasn't one JSON object, or nested too deeply or repeated a key  [VL0406]
   ╭─[ game.velme:3:1 ]
   │
 3 │ ╭─▶ goal Double(n: Number) -> Number:
   ┆ ┆   
 6 │ ├─▶         - Double(2) == 4
   │ │                              
   │ ╰────────────────────────────── here
   │     
   │     Note: The backend's reply ended: this is not JSON
───╯
