crates/velme-cli/tests/snapshots/codes__vl0407_json.snap
---
source: crates/velme-cli/tests/codes.rs
expression: redact(&pretty)
---
{
  "diagnostics": [],
  "format": "velme-cli/1",
  "notices": [
    "Nothing is sent: the scripted provider answers from its script."
  ],
  "results": [
    {
      "diagnostics": [
        {
          "code": "VL0407",
          "file": "game.velme",
          "labels": [],
          "message": "Velme needs more detail to build `Double`. Add the answer as an example, or to the plan, and build again.",
          "notes": [
            "The AI helper asked: \"Round up?\""
          ],
          "severity": "error",
          "span": {
            "column": 1,
            "end": 116,
            "line": 3,
            "start": 21
          }
        }
      ],
      "goal": "Double",
      "status": "failed"
    }
  ],
  "status": "failed",
  "summary": {
    "cache_read_tokens": 0,
    "cache_write_tokens": 0,
    "calls": 1,
    "input_tokens": 0,
    "lock_hits": 0,
    "output_tokens": 0,
    "store_hits": 0,
    "synthesized": 0
  }
}
