crates/velme-cli/tests/snapshots/codes__vl0408_human.snap
---
source: crates/velme-cli/tests/codes.rs
expression: redact(&human.stderr)
---
Sending your plans, types, checks and examples to the external backend at 127.0.0.1 to write the code.
Error: `Double` is waiting for an implementation from `velme-test-support`. Build again once it's ready.  [VL0408]
   ╭─[ game.velme:3:1 ]
   │
 3 │ ╭─▶ goal Double(n: Number) -> Number:
   ┆ ┆   
 6 │ ├─▶         - Double(2) == 4
   │ │                              
   │ ╰────────────────────────────── here
   │     
   │     Note: The backend said: "ticket 42"
───╯
