crates/velme-cli/tests/snapshots/codes__vl0408_json.snap
---
source: crates/velme-cli/tests/codes.rs
expression: redact(&pretty)
---
{
  "diagnostics": [],
  "format": "velme-cli/1",
  "notices": [
    "Sending your plans, types, checks and examples to the external backend at 127.0.0.1 to write the code."
  ],
  "results": [
    {
      "diagnostics": [
        {
          "code": "VL0408",
          "file": "game.velme",
          "labels": [],
          "message": "`Double` is waiting for an implementation from `velme-test-support`. Build again once it's ready.",
          "notes": [
            "The backend said: \"ticket 42\""
          ],
          "severity": "error",
          "span": {
            "column": 1,
            "end": 116,
            "line": 3,
            "start": 21
          }
        }
      ],
      "goal": "Double",
      "status": "pending"
    }
  ],
  "status": "failed",
  "summary": {
    "cache_read_tokens": 0,
    "cache_write_tokens": 0,
    "calls": 1,
    "input_tokens": 0,
    "lock_hits": 0,
    "output_tokens": 0,
    "store_hits": 0,
    "synthesized": 0
  }
}
