crates/velme-cli/tests/snapshots/codes__vl0409_human.snap
---
source: crates/velme-cli/tests/codes.rs
expression: redact(&human.stderr)
---
Nothing is sent: the scripted provider answers from its script.
Error: Velme needs more detail to build `Double`. Add the answer as an example, or to the plan, and build again.  [VL0407]
   ╭─[ game.velme:3:1 ]
   │
 3 │ ╭─▶ goal Double(n: Number) -> Number:
   ┆ ┆   
 6 │ ├─▶         - Double(2) == 4
   │ │                              
   │ ╰────────────────────────────── here
   │     
   │     Note: The AI helper asked: "Round up?"
───╯
Error: `Both` wasn't built because `Double` couldn't be built.  [VL0409]
    ╭─[ game.velme:8:1 ]
    │
  8 │ ╭─▶ goal Both(n: Number) -> Number:
    ┆ ┆   
 12 │ ├─▶         - Both(1) == 3
    │ │                            
    │ ╰──────────────────────────── here
    │     
    │     Note: `Double` ended with VL0407
────╯
